[Fix] `listView` prevent scrollbar click event propagation

--- a/src/styles/workbench/actionView/explorer/explorerView.css
+++ b/src/styles/workbench/actionView/explorer/explorerView.css
@@ -11,7 +11,6 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    overflow: hidden;
 }
 
 .unopened-explorer-container > .explorer-open-tag {
